feat: [리뷰반영] 문제 다양성을 위해 오름차순 재배치 제거